--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           name: Running tests
           command: |
             . venv/bin/activate
-            python -m pytest
+            python -m pytest --cov=app --cov-report=term
       - store_artifacts:
           path: test-reports/
           destination: python_app
